--- a/ilovehorror-master/index.html
+++ b/ilovehorror-master/index.html
@@ -43,7 +43,7 @@
             <br/>
             유니코드: %uCD5C%uACE0%uC758%20%uBE71%uCF58%20%uC790%uACA9%uC744%20%uAC16%uCD94%uC168%uC2B5%uB2C8%uB2E4.%0A
             한글변환: 최고의 빱콘 자격을 갖추셨습니다.
-            <a href="ppapcon.github.io/comeon/">ppapcon.github.io/comeon/</a>
+            <a href="ppapcon.github.io/comeon-master/">ppapcon.github.io/comeon-master/</a>
             <br/><br/>
             유니코드: %uC6B0%uB9AC%20%uBAA8%uB450%20%uC790%uBE71%uC744%20%uC704%uD558%uC5EC%20%uCD5C%uACE0%uC758%20%uBE71%uCF58%uC774%20%uB418%uC5B4%20%uBD05%uC2DC%uB2E4.%0A
             한글변환: 우리 모두 자빱을 위하여 최고의 빱콘이 되어 봅시다.
