--- a/ilovehorror-master/index.html
+++ b/ilovehorror-master/index.html
@@ -53,7 +53,7 @@
         </div>
     </div>
 
-    <link rel="stylesheet" type="text/css" href="ilovehorror-master/main.css">
+    <link rel="stylesheet" type="text/css" href="ilovehorror-master/main.css?after">
 
 </body>
 
