--- a/ilovehorror-master/index.html
+++ b/ilovehorror-master/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 
-    <img src="ilovehorror-master/images/logo.png" class="logo">
+    <img src="images/logo.png" class="logo">
 
     <div class="my-info">
-        <div class="my-name"><img src="ilovehorror-master/images/level-1.png">&nbsp&nbspLv.01 뺣콘</div>
+        <div class="my-name"><img src="images/level-1.png">&nbsp&nbspLv.01 뺣콘</div>
         <div class="my-btn">마▣페뛣!&</div>
         <div class="my-btn">*@◑아^$</div>
     </div>
@@ -43,6 +43,7 @@
             <br/>
             유니코드: %uCD5C%uACE0%uC758%20%uBE71%uCF58%20%uC790%uACA9%uC744%20%uAC16%uCD94%uC168%uC2B5%uB2C8%uB2E4.%0A
             한글변환: 최고의 빱콘 자격을 갖추셨습니다.
+            <br/><br/>
             <a href="ppapcon.github.io/comeon-master/">ppapcon.github.io/comeon-master/</a>
             <br/><br/>
             유니코드: %uC6B0%uB9AC%20%uBAA8%uB450%20%uC790%uBE71%uC744%20%uC704%uD558%uC5EC%20%uCD5C%uACE0%uC758%20%uBE71%uCF58%uC774%20%uB418%uC5B4%20%uBD05%uC2DC%uB2E4.%0A
@@ -53,7 +54,7 @@
         </div>
     </div>
 
-    <link rel="stylesheet" type="text/css" href="ilovehorror-master/main.css?after">
+    <link rel="stylesheet" type="text/css" href="main.css?after">
 
 </body>
 
