--- a/ilovehorror-master/index.html
+++ b/ilovehorror-master/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 
-    <img src="images/logo.png" class="logo">
+    <img src="./images/logo.png" class="logo">
 
     <div class="my-info">
-        <div class="my-name"><img src="images/level-1.png">&nbsp&nbspLv.01 뺣콘</div>
+        <div class="my-name"><img src="./images/level-1.png">&nbsp&nbspLv.01 뺣콘</div>
         <div class="my-btn">마▣페뛣!&</div>
         <div class="my-btn">*@◑아^$</div>
     </div>
@@ -54,7 +54,7 @@
         </div>
     </div>
 
-    <link rel="stylesheet" type="text/css" href="main.css?after">
+    <link rel="stylesheet" type="text/css" href="./main.css?ver=1">
 
 </body>
 
