--- a/ilovehorror-master/index.html
+++ b/ilovehorror-master/index.html
@@ -49,7 +49,7 @@
             <br/>
             한글변환: 최고의 빱콘 자격을 갖추셨습니다.
             <br/><br/>
-            <a href="http://ppapcon.github.io/comeon-master/">ppapcon.github.io/comeon-master/</a>
+            <a href="http://www.ppapcon.github.io/comeon-master/">ppapcon.github.io/comeon-master/</a>
             <br/><br/>
             유니코드: %uC6B0%uB9AC%20%uBAA8%uB450%20%uC790%uBE71%uC744%20%uC704%uD558%uC5EC%20%uCD5C%uACE0%uC758%20%uBE71%uCF58%uC774%20%uB418%uC5B4%20%uBD05%uC2DC%uB2E4.%0A
             <br/>
@@ -61,7 +61,7 @@
         </div>
     </div>
 
-    <link rel="stylesheet" type="text/css" href="./main.css?ver=2">
+    <link rel="stylesheet" type="text/css" href="./main.css?ver=4">
 
 </body>
 
