--- a/comeon-master/index.html
+++ b/comeon-master/index.html
@@ -181,7 +181,7 @@
             <td class="blank"></td>
             <td class="blank"></td>
             <td class="blank"></td>
-            <td class="here">게</td>
+            <td class="here"><center>작</center></td>
         </tr>
         <tr>
             <td></td>
@@ -200,7 +200,7 @@
             <td>B<br/><br/><br/></td>
             <td></td>
             <td></td>
-            <td class="here"></td>
+            <td class="here"><center>게</center></td>
             <td></td>
             <td></td>
             <td></td>
@@ -213,12 +213,12 @@
             <td></td>
             <td class="blank"></td>
             <td class="blank"></td>
-            <td class="here"></td>
+            <td class="here"><center>임</center></td>
             <td class="blank"></td>
             <td class="blank"></td>
             <td>C<br/><br/><br/></td>
             <td></td>
-            <td class="here"></td>
+            <td class="here"><center>미</center></td>
             <td></td>
             <td></td>
         </tr>
@@ -238,7 +238,7 @@
         <tr>
             <td class="blank"></td>
             <td class="blank"></td>
-            <td class="here">D<br/><br/><br/></td>
+            <td class="here"><center>이</center></td>
             <td></td>
             <td class="blank"></td>
             <td class="blank"></td>
@@ -250,14 +250,14 @@
         </tr>
         <tr>
             <td>6 E<br/><br/><br/></td>
-            <td class="here"></td>
+            <td class="here"><center>시</center></td>
             <td></td>
             <td class="blank"></td>
             <td class="blank"></td>
             <td class="blank"></td>
             <td class="blank"></td>
             <td class="blank"></td>
-            <td class="here">F<br/><br/><br/></td>
+            <td class="here"><center>됐</center></td>
             <td></td>
             <td>7<br/><br/><br/></td>
         </tr>
@@ -293,12 +293,12 @@
             <td class="blank"></td>
             <td>G<br/><br/><br/></td>
             <td></td>
-            <td class="here"></td>
+            <td class="here"><center>은</center></td>
             <td></td>
             <td></td>
             <td></td>
             <td></td>
-            <td class="here"></td>
+            <td class="here"><center>다</center></td>
         </tr>
     </table>
 
@@ -324,8 +324,8 @@
         <div>G. 빱라임씬 1화 0:23 [범인은이안에있다]</div>
     </div>
     <div class="outer">
-        <div>jappap.github.io/답</div>
-        <div>답을 영어로 입력하시오<br/>ex) 정답 > wjdekq</div>
+        <div>정답: [게임은이미시작됐다]를 영어로 쓴 것! rpdladmsdlaltlwkrehoTek</div>
+        <div><a href="http://www.ppapcon.github.io/rpdladmsdlaltlwkrehoTek-master/">ppapcon.github.io/rpdladmsdlaltlwkrehoTek-master/</a></div>
     </div>
     <br/><br/><br/>
     <br/><br/><br/>
