--- a/explorer-master/index.html
+++ b/explorer-master/index.html
@@ -6,13 +6,13 @@
 </head>
 <body>
 
-    <img src="images/reward-b-1.png">
-    <img src="images/reward-b-2.png">
+    <img src="./images/reward-b-1.png">
+    <img src="./images/reward-b-2.png">
 
     <div>jappap.github.io/good</div>
     
 </body>
 
-<link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" type="text/css" href="./main.css">
 
 </html>
