--- a/rpdladmsdlaltlwkrehoTek-master/index.html
+++ b/rpdladmsdlaltlwkrehoTek-master/index.html
@@ -8,11 +8,12 @@
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/ceuG8ez9fUw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-    <div>jappap.github.io/ruready</div>
+    <div><a href="http://www.ppapcon.github.io/ruready-master/">Are You Ready?</a></div>
+
     
 </body>
 
 <script src="reward-a.js"></script>
-<link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" type="text/css" href="./main.css">
 
 </html>
