--- a/ruready-master/index.html
+++ b/ruready-master/index.html
@@ -18,6 +18,6 @@
     
 </body>
 
-<link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" type="text/css" href="./main.css">
 
 </html>
