--- a/rpdladmsdlaltlwkrehoTek-master/index.html
+++ b/rpdladmsdlaltlwkrehoTek-master/index.html
@@ -14,6 +14,6 @@
 </body>
 
 <script src="reward-a.js"></script>
-<link rel="stylesheet" type="text/css" href="./main.css">
+<link rel="stylesheet" type="text/css" href="./main.css?ver=1">
 
 </html>
