--- a/explorer-master/index.html
+++ b/explorer-master/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>%uB450%uBC88%uC9F8%20%uBE44%uBC00</title>
+<title>두번째 비밀</title>
 </head>
 <body>
 
@@ -10,6 +10,7 @@
     <img src="./images/reward-b-2.png">
 
     <div>jappap.github.io/good</div>
+    <div><a href="http://www.ppapcon.github.io/good-master/">ppapcon.github.io/good-master</a></div>
     
 </body>
 
