--- a/flour-master/index.html
+++ b/flour-master/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>%uB9C8%uC9C0%uB9C9%20%uBE44%uBC00</title>
+<title>마지막 비밀</title>
 </head>
 <body>
 
@@ -10,6 +10,6 @@
     
 </body>
 
-<link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" type="text/css" href="./main.css">
 
 </html>
