--- a/good-master/index.html
+++ b/good-master/index.html
@@ -7,17 +7,19 @@
 </head>
 <body>
 
-    <img src="quiz-c.png" class="quiz">
+    <img src="./quiz-c.png" class="quiz">
 
     <br/><br/><br/>
     술의 재료는? 
     <br/><br/><br/><br/><br/>
-    jappap.github.io/답
+    jappap.github.io/flour
+    <br/><br/>
+    <div><a href="http://www.ppapcon.github.io/flour-master">ppapcon.github.io/flour-master</a></div>
     <br/><br/><br/><br/><br/>
     <br/><br/><br/><br/><br/>
     
 </body>
 
-<link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" type="text/css" href="./main.css">
 
 </html>
