--- a/ruready-master/index.html
+++ b/ruready-master/index.html
@@ -7,11 +7,25 @@
 </head>
 <body>
 
-    <img src="images/quiz-b.png" class="quiz">
+    <img src="./images/quiz-b.png" class="quiz">
 
     <div class="outer">
         <div>jappap.github.io/답</div>
         <div>힌트: 8</div>
+    </div>
+
+    <div class="outer">
+        <div>첫번째가 좋은 elephant: e</div>
+        <div>세번째도 상관없는 fox: x</div>
+        <div>첫번째가 탐나는 pig: p</div>
+        <div>마지막이어도 좋은 squirrel: l</div>
+        <div>중간인 세번째가 좋은 flog: o</div>
+        <div>3, 7이어도 상관없는 giraffe: r, e</div>
+        <div>첫번째 시켜줘! rabbit: r</div>
+        <div>다 이어보면 답은 explorer어야</div>
+        <div>jappap.github.io/explorer</div>
+        <div><a href="http://www.ppapcon.github.io/explorer-master">ppapcon.github.io/explorer-master</a></div>
+
     </div>
     <br/><br/><br/>
     <br/><br/><br/>
