--- a/ilovehorror-master/index.html
+++ b/ilovehorror-master/index.html
@@ -61,7 +61,7 @@
         </div>
     </div>
 
-    <link rel="stylesheet" type="text/css" href="./main.css?ver=4">
+    <link rel="stylesheet" type="text/css" href="./main.css">
 
 </body>
 
