--- a/explorer-master/index.html
+++ b/explorer-master/index.html
@@ -10,7 +10,7 @@
     <img src="./images/reward-b-2.png">
 
     <div>jappap.github.io/good</div>
-    <div><a href="http://www.ppapcon.github.io/good-master/">ppapcon.github.io/good-master</a></div>
+    <div><a href="http://ppapcon.github.io/good-master/">ppapcon.github.io/good-master</a></div>
     
 </body>
 
