--- a/good-master/index.html
+++ b/good-master/index.html
@@ -19,7 +19,7 @@
     <br/>
     jappap.github.io/flour
     <br/><br/>
-    <div><a href="http://www.ppapcon.github.io/flour-master">ppapcon.github.io/flour-master</a></div>
+    <div><a href="http://ppapcon.github.io/flour-master">ppapcon.github.io/flour-master</a></div>
     <br/><br/><br/><br/><br/>
     <br/><br/><br/><br/><br/>
     
