--- a/ruready-master/index.html
+++ b/ruready-master/index.html
@@ -24,7 +24,7 @@
         <div>첫번째 시켜줘! rabbit: r</div>
         <div>다 이어보면 답은 explorer어야</div>
         <div>jappap.github.io/explorer</div>
-        <div><a href="http://www.ppapcon.github.io/explorer-master">ppapcon.github.io/explorer-master</a></div>
+        <div><a href="http://ppapcon.github.io/explorer-master">ppapcon.github.io/explorer-master</a></div>
 
     </div>
     <br/><br/><br/>
