--- a/rpdladmsdlaltlwkrehoTek-master/index.html
+++ b/rpdladmsdlaltlwkrehoTek-master/index.html
@@ -8,7 +8,7 @@
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/ceuG8ez9fUw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-    <div><a href="http://www.ppapcon.github.io/ruready-master/">Are You Ready?</a></div>
+    <div><a href="http://ppapcon.github.io/ruready-master/">Are You Ready?</a></div>
 
     
 </body>
