--- a/good-master/index.html
+++ b/good-master/index.html
@@ -18,7 +18,7 @@
     천주교에서 말하는 주님의 살(?) 성체(?) 밀가루 과자래유.. 난 뭔지 모르것슈...
     <br/>
     <br/>
-    또 다른 풀이는 발음 같은 단어 찾기?? meet(영접하다)이랑 meat(살점) flower(꽃) flour(밀가루) 이렇게 하는거라는 천재적인 콘의 풀이가 있었샤!!
+    또 다른 풀이는 발음 같은 단어 찾기?? meet(영접하다)이랑 meat(살점) flower(꽃) flour(밀가루) see(보다) sea(바다) 이렇게 하는거라는 천재적인 콘의 풀이가 있었샤!!
     <br/>
     <br/>
     jappap.github.io/flour
