--- a/good-master/index.html
+++ b/good-master/index.html
@@ -15,10 +15,12 @@
     <br/><br/><br/><br/><br/>
     <br/><br/><br/><br/><br/>
     <br/><br/><br/><br/>
-    천주교에서 말하는 주님의 살(?) 성체(?) 밀가루 과자래유.. 난 뭔지 모르것슈...
-    <br/>
-    <br/>
-    또 다른 풀이는 발음 같은 단어 찾기?? meet(영접하다)이랑 meat(살점) flower(꽃) flour(밀가루) see(보다) sea(바다) 이렇게 하는거라는 천재적인 콘의 풀이가 있었샤!!
+    그것을 읽는 (read) 자 그분이 이끌어 (lead) 주실 것이다<br/>
+    너희는 안다 (know) 말하는 것은 ~ 아무것도 아니다 (no)<br/>
+    바다와 (sea) 같은 아량과 축복을 볼수있다 (see)<br/>
+    지금 이자리 (here)에서 소리를 들어라 (hear)<br/>
+    영접하라 (meet) 살점을 (meat) 바쳐라<br/>
+    그것(flour)!! 으로 빚은 술과 꽃 (flower)과 같은 피<br/>
     <br/>
     <br/>
     jappap.github.io/flour
